Got random images to show with no repititions and append them to the html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title></title>
   </head>
   <body>
+    <div>
+      <ul id="pictures">
 
+      </ul>
 
-
-
+    </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
