Number of appearances updates and the event listener works

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
-      <ul id="pictures">
-
-      </ul>
+    <div id="pictures">
 
     </div>
     <script type="text/javascript" src="app.js"></script>
