Added chart functionality

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </head>
   <body>
     <div id="pictures">
 
     </div>
+    <canvas id="productChoices"></canvas>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
