Dual bar chart works with cummulative click number

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     </div>
     <canvas id="productChoices"></canvas>
+    <a href="chart.html">Here's a chart!</a>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
