--- a/chart.html
+++ b/chart.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <canvas id="productChoices"></canvas>
+    <a href="index.html">Back to the beginnning!</a>
     <script type="text/javascript" src="chart.js"></script>
   </body>
 </html>
